perf(core): avoid duplicate terminal index lookup and trace ingress queues